--- a/frontend/src/styles/journeys.css
+++ b/frontend/src/styles/journeys.css
@@ -1,83 +1,82 @@
 .App {
-    text-align: center;
-  }
-  
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    height: 40vmin;
-    pointer-events: none;
+    animation: App-logo-spin infinite 20s linear;
   }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
+}
+
+.Journey-page {
+  background-color: #7a4090;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.view-select {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.view-select:visited {
+  color: inherit;
+}
+
+.journey-button {
+  margin-left: 1rem;
+  background-color: #7a4090;
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
+}
+
+.station-button {
+  margin-right: 1rem;
+  padding: 1rem;
+  background-color: #3f9560;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
+}
+
+.station-button:hover,
+.journey-button:hover {
+  animation: station-button 0.3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes station-button {
+  from {
+    transform: scale(1);
   }
-  
-  .App-header {
-    background-color: #7A4090;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  to {
+    transform: scale(1.05);
   }
-  
-  .App-link {
-    color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
-  .view-select {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  to {
+    transform: rotate(360deg);
   }
-  
-  .view-select:visited {
-    color: inherit;
-  }
-  
-  .journey-button {
-    margin-left: 1rem;
-    background-color: #7A4090;
-    padding: 1rem;
-    cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
-  }
-  
-  .station-button {
-    margin-right: 1rem;
-    padding: 1rem;
-    background-color: #3F9560;
-    border-radius: 10px;
-    cursor: pointer;
-    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
-  }
-  
-  .station-button:hover, .journey-button:hover {
-    animation: station-button 0.3s;
-    animation-fill-mode: forwards;
-  }
-  
-  @keyframes station-button {
-    from {
-      transform: scale(1);
-    }
-    to {
-      transform: scale(1.05);
-    }
-  }
-  
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
+}
