--- a/frontend/src/styles/stations.css
+++ b/frontend/src/styles/stations.css
@@ -1,86 +1,69 @@
-.App {
-    text-align: center;
-  }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #3F9560;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  .view-select {
+
+.Station-page {
+  background-color: #007ac9;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.station-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  width: 50%;
+  padding: 0 1rem;
+}
+
+.Station-page-buttons {
+    padding-top: 2rem;;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .view-select:visited {
-    color: inherit; /* sets the color of visited links to the inherited color */
-    text-decoration: none; /* removes the underline */
-  }
-  
-  .journey-button {
+}
+
+.next-button {
     margin-left: 1rem;
-    background-color: #7A4090;
+    background-color: #7a4090;
     padding: 1rem;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
-    color: inherit; /* sets the color of visited links to the inherited color */
-    text-decoration: none; /* removes the underline */
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
   }
   
-  .station-button {
+  .prev-button {
     margin-right: 1rem;
     padding: 1rem;
-    background-color: #3F9560;
+    background-color: #7a4090;
     border-radius: 10px;
     cursor: pointer;
-    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
   }
-  
-  .station-button:hover, .journey-button:hover {
-    animation: station-button 0.3s;
-    animation-fill-mode: forwards;
+
+    .next-button:hover,
+    .prev-button:hover {
+      animation: zoom-button 0.3s;
+      animation-fill-mode: forwards;
+    }
+
+@keyframes zoom-button {
+  from {
+    transform: scale(1);
   }
-  
-  @keyframes station-button {
-    from {
-      transform: scale(1);
-    }
-    to {
-      transform: scale(1.05);
-    }
+  to {
+    transform: scale(1.05);
   }
-  
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
+  to {
+    transform: rotate(360deg);
+  }
+}
