--- a/frontend/src/components/component_styles/stationcard.css
+++ b/frontend/src/components/component_styles/stationcard.css
@@ -1,26 +1,31 @@
-.station {
-    overflow: hidden;
-    width: 1 rem;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    background-color: #3f9560;
-    padding: 1rem;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
-  }
+
+.station:hover {
+  animation: zoom-button 0.3s;
+  animation-fill-mode: forwards;
+}
 
 .station-name {
-  font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
 .station-address {
-  font-size: 1rem;
   margin-bottom: 0.5rem;
 }
 
+.station {
+  padding: 1rem;
+  font-size: calc(5x + 1vmin);
+
+}
+
+
+
+@keyframes zoom-button {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.05);
+  }
+}
