--- a/frontend/src/styles/stations.css
+++ b/frontend/src/styles/stations.css
@@ -1,4 +1,3 @@
-
 .Station-page {
   background-color: #007ac9;
   min-height: 100vh;
@@ -10,23 +9,36 @@
   color: white;
 }
 
+.search-input:focus {
+  outline: none;
+}
+
+.search-input {
+  width: 30rem;
+  font-size: 1rem;
+  padding: 0.5rem;
+  border: 3px solid #fff;
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+}
+
+
 .table-wrapper { 
-  width: 70%;
-  box-shadow: 0px 35px 35px rgba(0,0,0,0.75);
+  width: 50%;
+  max-width: 2500px;
+  box-shadow: 0px 35px 35px #333;
+  table-layout: fixed;
+  border-radius: 10px;
 }
 
-
-.station-table {
-  padding: 2 rem;
-  text-align: center;
-  background-color: white;
-  color: black;
-  border-collapse: collapse;
+.table-view{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.station-table th {
-  padding: 1rem;
-}
 
 table{
   width: 100%;
@@ -38,12 +50,23 @@ td {
   padding: 0.5rem;
   border-bottom: 1px solid black;
   cursor: pointer;
-  font-size: calc(1px + 2vmin);
+  font-size: 0.8rem;  
 }
 
 th {
   background-color: #3f9560;
   color: white;
+  border-bottom: 1px solid black;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
+table th:first-child{
+  border-radius:10px 0 0 0;
+}
+
+table th:last-child{
+  border-radius:0 10px 0 0;
 }
 
 tr:hover {
@@ -51,37 +74,64 @@ tr:hover {
   color: white;
 }
 
-.page-select {
-  text-align: inherit;
-  background-color: #3f9560;
-  color: white;
-  width: 100%;
-  font-size: calc(10px + 2vmin);
-  border-radius: 10px 10px 0px 0px;
-  padding: 10px;
-  border: none;
-  appearance: none;
+
+.nav-button {
+  width: 0;
+  height: 0;
+  border-top: 35px solid transparent;
+  border-bottom: 35px solid transparent;
+  cursor: pointer;
 }
 
+#left-btn {
+  border-right: 50px solid #fff;
+  margin-right: 25px;
+}
 
+#right-btn {
+  border-left: 50px solid #fff;
+  margin-left: 25px;
+}
 
+.nav-button:hover {
+  animation: zoom-button 0.3s;
+  animation-fill-mode: forwards;
+}
 
+.nav-button:active {
+  animation: click 0.3s;
+  animation-fill-mode: forwards;
+}
 
+.nav-button-disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.station-table {
+  padding: 2 rem;
+  text-align: center;
+  background-color: white;
+  color: black;
+  border-collapse: collapse;
+}
 
 @keyframes zoom-button {
   from {
     transform: scale(1);
   }
   to {
-    transform: scale(1.05);
+    transform: scale(1.25);
   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes click {
+  0% {
+    transform: scale(0);
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: scale(2);
+    opacity: 0;
   }
 }
