--- a/frontend/src/styles/journeys.css
+++ b/frontend/src/styles/journeys.css
@@ -1,20 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .Journey-page {
-  background-color: #7a4090;
+  background-color: #007ac9;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,59 +9,130 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.search-input:focus {
+  outline: none;
 }
 
-.view-select {
+.search-input {
+  width: 30rem;
+  font-size: 1rem;
+  padding: 0.5rem;
+  border: 3px solid #fff;
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+}
+
+
+.table-wrapper { 
+  width: 50%;
+  max-width: 2500px;
+  box-shadow: 0px 35px 35px #333;
+  table-layout: fixed;
+  border-radius: 10px;
+}
+
+.table-view{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
-.view-select:visited {
-  color: inherit;
+
+table{
+  width: 100%;
+  table-layout: fixed;
+  border-radius: 10px;
 }
 
-.journey-button {
-  margin-left: 1rem;
+td {
+  padding: 0.5rem;
+  border-bottom: 1px solid black;
+  cursor: pointer;
+  font-size: 0.8rem;  
+}
+
+th {
   background-color: #7a4090;
-  padding: 1rem;
-  cursor: pointer;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
+  color: white;
+  border-bottom: 1px solid black;
+  font-size: 1.5rem;
+  padding: 0.5rem;
 }
 
-.station-button {
-  margin-right: 1rem;
-  padding: 1rem;
-  background-color: #3f9560;
-  border-radius: 10px;
-  cursor: pointer;
-  box-shadow: 0 10px 20px -8px rgba(0, 0, 0, 0.7);
+table th:first-child{
+  border-radius:10px 0 0 0;
 }
 
-.station-button:hover,
-.journey-button:hover {
-  animation: station-button 0.3s;
+table th:last-child{
+  border-radius:0 10px 0 0;
+}
+
+tr:hover {
+  background-color: #7a4090;
+  opacity: 0.5;
+  color: white;
+}
+
+
+.nav-button {
+  width: 0;
+  height: 0;
+  border-top: 35px solid transparent;
+  border-bottom: 35px solid transparent;
+  cursor: pointer;
+}
+
+#left-btn {
+  border-right: 50px solid #fff;
+  margin-right: 25px;
+}
+
+#right-btn {
+  border-left: 50px solid #fff;
+  margin-left: 25px;
+}
+
+.nav-button:hover {
+  animation: zoom-button 0.3s;
   animation-fill-mode: forwards;
 }
 
-@keyframes station-button {
+.nav-button:active {
+  animation: click 0.3s;
+  animation-fill-mode: forwards;
+}
+
+.nav-button-disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.station-table {
+  padding: 2 rem;
+  text-align: center;
+  background-color: white;
+  color: black;
+  border-collapse: collapse;
+}
+
+@keyframes zoom-button {
   from {
     transform: scale(1);
   }
   to {
-    transform: scale(1.05);
+    transform: scale(1.25);
   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes click {
+  0% {
+    transform: scale(0);
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: scale(2);
+    opacity: 0;
   }
 }
